--- a/Client.Web/Scripts/App/component/header/header.css
+++ b/Client.Web/Scripts/App/component/header/header.css
@@ -1,3 +1,9 @@
+.wrap {
+  width: 1440px;
+  margin: 0 auto;
+  background-color: red;
+}
+
 header {
   position: fixed;
   top: 0;
@@ -5,4 +11,13 @@ header {
   right: 0;
   height: 80px;
   background-color: red;
+}
+
+header .user-logo {
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background: #edfaf7;
+  width: 80px;
 }
