--- a/Client.Web/Scripts/App/component/header/header.html
+++ b/Client.Web/Scripts/App/component/header/header.html
@@ -1,4 +1,4 @@
 <header>
-  <div>{{::header}}</div>
+  <img src="../../images/logo-green.svg" class="logo-green"/>
   <div class="user-logo"></div>
 </header>
