--- a/Client.Web/Scripts/App/component/header/header.css
+++ b/Client.Web/Scripts/App/component/header/header.css
@@ -8,6 +8,10 @@ header {
   padding: 30px;
 }
 
+header .logo-green {
+  height: 100%;
+}
+
 header .user-logo {
   position: absolute;
   right: 0;
