--- a/Client.Web/Scripts/App/component/header/header.scss
+++ b/Client.Web/Scripts/App/component/header/header.scss
@@ -6,6 +6,9 @@ header{
   height:80px;
   background-color: white;
   padding:30px;
+  .logo-green{
+    height:100%;
+  }
   .user-logo{
     position:absolute;
     right:0;
