--- a/Client.Web/Scripts/App/component/header/header.scss
+++ b/Client.Web/Scripts/App/component/header/header.scss
@@ -5,7 +5,7 @@ header{
   right:0;
   height:80px;
   background-color: white;
-  padding:30px;
+  padding:15px 30px;
   .logo-green{
     height:100%;
   }
