--- a/Client.Web/Scripts/App/Styles/components.scss
+++ b/Client.Web/Scripts/App/Styles/components.scss
@@ -2,12 +2,13 @@
   box-sizing: border-box;
 }
 html,body{
-  min-height:100%;
+  height:100%;
+  background-color: red;
 }
 .wrap{
   width:1440px;
   margin:0 auto;
   position:relative;
-  background-color: #5a47f4;
-  height:100%;
+  background-color: #fff;
+  min-height:100%;
 }
