--- a/Client.Web/Scripts/App/component/gheader/gheader.html
+++ b/Client.Web/Scripts/App/component/gheader/gheader.html
@@ -1,4 +1,4 @@
-<header>
+<header class="gheader">
   <img src="images/logo-green.svg" class="logo-green"/>
   <div class="user-logo"></div>
 </header>
