add routers to main page, search and my ads

--- a/Client.Web/Scripts/App/component/gheader/gheader.html
+++ b/Client.Web/Scripts/App/component/gheader/gheader.html
@@ -1,4 +1,9 @@
 <header class="gheader">
-  <img src="images/logo-green.svg" class="logo-green"/>
+  <a ui-sref="home">
+    <img src="images/logo-green.svg" class="logo-green"/>
+  </a>
+
+  <a ui-sref="search">Поиск квартир</a>
+  <a ui-sref="my-ads">Мои объекты</a>
   <div class="user-logo"></div>
 </header>
