--- a/Client.Web/Scripts/App/component/gheader/gheader.html
+++ b/Client.Web/Scripts/App/component/gheader/gheader.html
@@ -5,6 +5,7 @@
     <div class="menu-item">поиск квартиры</div>
     <div class="menu-item active">мои объекты</div>
   </nav>
-  <button type="button" class="button round alert"></button>
+  <button type="button" class="button round alert">Продать квартиру</button>
+  <div class=""></div>
   <div class="user-logo"></div>
 </header>
