--- a/Client.Web/Scripts/App/component/gheader/gheader.scss
+++ b/Client.Web/Scripts/App/component/gheader/gheader.scss
@@ -30,6 +30,7 @@ header{
     display:inline-block;
     vertical-align:top;
     margin-top:-18px;
+    margin-right:250px;
     .menu-item{
       display:inline-block;
       line-height:78px;
