--- a/Client.Web/Scripts/App/component/gheader/gheader.html
+++ b/Client.Web/Scripts/App/component/gheader/gheader.html
@@ -3,12 +3,12 @@
   <a ui-sref="home">
     <img src="images/logo-green.svg" class="logo-green"/>
   </a>
-  <div class="grey-text">Решение квартирного вопроса</div>
+  <div class="grey text">Решение квартирного вопроса</div>
   <nav>
-    <a ui-sref="search"  class="menu-item">Поиск квартир</a>
-    <a ui-sref="my-ads" class="menu-item active">Мои объекты</a>
+    <a ui-sref="search" ui-sref-active="active"  class="menu-item">Поиск квартир</a>
+    <a ui-sref="my-ads" ui-sref-active="active" class="menu-item">Мои объекты</a>
   </nav>
   <button type="button" class="button round alert">Продать квартиру</button>
-  <div class=""></div>
+  <div class="black text">Войти в профиль</div>
   <div class="user-logo"></div>
 </header>
