use gulp for project env

--- a/Client.Web/Scripts/App/component/gheader/gheader.html
+++ b/Client.Web/Scripts/App/component/gheader/gheader.html
@@ -1,7 +1,7 @@
 
 <header class="gheader">
   <a ui-sref="home">
-    <img src="images/logo-green.svg" class="logo-green"/>
+    <img src="app/images/logo-green.svg" class="logo-green"/>
   </a>
   <div class="grey text">Решение квартирного вопроса</div>
   <nav>
