--- a/Client.Web/Scripts/app/component/gheader/gheader.html
+++ b/Client.Web/Scripts/app/component/gheader/gheader.html
@@ -1,8 +1,6 @@
 
 <header class="gheader">
-  <a ui-sref="home">
-    <img src="app/theme/img/logo-green.svg" class="logo-green"/>
-  </a>
+  <img ui-sref="home" src="app/theme/img/logo-green.svg" class="logo-green"/>
   <div class="grey text">Решение квартирного вопроса</div>
   <nav>
     <a ui-sref="search" ui-sref-active="active" class="menu-item">Поиск квартир</a>
