--- a/Client.Web/Scripts/app/theme/style/components.scss
+++ b/Client.Web/Scripts/app/theme/style/components.scss
@@ -11,3 +11,8 @@ html,body {
   background-color: #fff;
   min-height:100%;
 }
+.main-content{
+  padding-top:80px;
+  min-height:100%;
+  background-color: #d3dde2;
+}
