удалил из файла проекта скрипты, так как их не было физически

--- a/Client.Web/Scripts/app/theme/style/components.scss
+++ b/Client.Web/Scripts/app/theme/style/components.scss
@@ -1,9 +1,4 @@
-* {
-  box-sizing: border-box;
-}
-html,body {
-  min-height: 100%;
-  font-family:'Lato';
+﻿  font-family:'Lato';
 }
 .app-wrapper {
   max-width: 1440px;
