удалил из файла проекта скрипты, так как их не было физически (reverted from commit 2974d4dd8474716a241d51aa25be307f6c40dce5)

--- a/Client.Web/Scripts/app/theme/style/components.scss
+++ b/Client.Web/Scripts/app/theme/style/components.scss
@@ -1,4 +1,9 @@
-﻿  font-family:'Lato';
+* {
+  box-sizing: border-box;
+}
+html,body {
+  min-height: 100%;
+  font-family:'Lato';
 }
 .app-wrapper {
   max-width: 1440px;
