--- a/Client.Web/Scripts/app/theme/style/fonts.scss
+++ b/Client.Web/Scripts/app/theme/style/fonts.scss
@@ -1,7 +1,9 @@
-//@include font-face("Lato", "../../Fonts/Lato/Lato-Thin", 100, $file-formats: ttf);
-//@include font-face("Lato", "../../Fonts/Lato/Lato-Light", 200, $file-formats: ttf eot woff woof2 svg);
-//@include font-face("Lato", "../../Fonts/Lato/Lato-Regular", normal, $file-formats: ttf eot woff woof2 svg);
-//@include font-face("Lato", "../../Fonts/Lato/Lato-Medium", 500, $file-formats: ttf eot woff woof2 svg);
-//@include font-face("Lato", "../../Fonts/Lato/Lato-Semibold", 600, $file-formats: ttf eot woff woof2 svg);
-//@include font-face("Lato", "../../Fonts/Lato/Lato-Heavy", 700, $file-formats: ttf eot woff woof2 svg);
-//@include font-face("Lato", "../../Fonts/Lato/Lato-Bold", bold, $file-formats: ttf eot woff woof2 svg);
+@import 'mixins.scss';
+
+@include font-face("Lato", "../../Fonts/Lato/Lato-Thin", 100, $exts: ttf);
+@include font-face("Lato", "../../Fonts/Lato/Lato-Light", 200, $exts: ttf);
+@include font-face("Lato", "../../Fonts/Lato/Lato-Regular", normal, $exts: ttf);
+@include font-face("Lato", "../../Fonts/Lato/Lato-Medium", 500, $exts: ttf);
+@include font-face("Lato", "../../Fonts/Lato/Lato-Semibold", 600, $exts: ttf);
+@include font-face("Lato", "../../Fonts/Lato/Lato-Heavy", 700, $exts: ttf);
+@include font-face("Lato", "../../Fonts/Lato/Lato-Bold", bold, $exts: ttf);
