--- a/Client.Web/Scripts/app/component/carousel/example/index.html
+++ b/Client.Web/Scripts/app/component/carousel/example/index.html
@@ -1,1 +1,3 @@
-<carousel></carousel>
+<div style="width: 673px; height: 547px;">
+    <carousel images="carouselData.images" disable-arrows="true"></carousel>
+</div>
