--- a/Client.Web/Scripts/app/theme/style/components.scss
+++ b/Client.Web/Scripts/app/theme/style/components.scss
@@ -16,7 +16,7 @@ html, body, .button {
   min-height:100%;
 }
 .main-content{
-  padding-top:80px;
-  min-height:100%;
+  padding: 120px 40px 40px 40px;
+  min-height: 100%;
   background-color: #d3dde2;
 }
