Add carousel thumbnail scrolling

--- a/Client.Web/Scripts/app/component/carousel/carousel.scss
+++ b/Client.Web/Scripts/app/component/carousel/carousel.scss
@@ -54,6 +54,7 @@ $line: 40px;
       position: absolute;
       width: 100%;
       bottom: 20px;
+      overflow: hidden;
       z-index: 100;
       .carousel-thumbnail-container {
         display: table;
