--- a/Client.Web/Scripts/app/component/carousel/carousel.html
+++ b/Client.Web/Scripts/app/component/carousel/carousel.html
@@ -14,7 +14,7 @@
     </span>
 
     <div class="carousel-thumbnail-wrapper" ng-hide="disableThumbnails">
-      <div class="carousel-thumbnail-container">
+      <div class="carousel-thumbnail-container" ng-style="carouselStyle">
         <a class="carousel-thumbnail" ng-repeat="img in images track by $index" ng-class="{active: img.active, last: $last}" ng-click="setActiveImage($index)">
           <img class="carousel-thumbnail-img" ng-src="{{img.src}}">
         </a>
