--- a/Client.Web/Scripts/app/component/cityPopUp/cityPopup.html
+++ b/Client.Web/Scripts/app/component/cityPopUp/cityPopup.html
@@ -1,14 +1,14 @@
 <div class="bg-image">
     <img src="app/theme/img/ng-image.png">
 </div>
-<div class="no-autocomplite" ng-if="!autocomplite">
+<div class="no-autocomplete" ng-if="!autocomplite">
     <h1 class="modal-header">Ваш город Москва?</h1>
     <div>
         <button type="button" class="button round alert" ng-click="ok()">Да, все верно</button>
         <div class="choose" ng-click="changeCity()">Нет, другой</div>
     </div>
 </div>
-<div ng-if="autocomplite" class="autocomplite">
+<div ng-if="autocomplete" class="autocomplete">
     <h2 class="modal-header" ng-hide="city || city.$touched">Укажите ваш город</h2>
     <form name="myForm" novalidate>
     <input ng-model="city"
@@ -21,6 +21,6 @@
            typeahead-on-select="selected(city.name)">
     </form>
     <div class='white-text' ng-show="myForm.city.$error.required">В настоящий момент сервис работает только в Москве и области</div>
-    <div class="white-text" ng-show="cities.list == 0 && !myForm.city.$error.required" >Такого города нет в Московской области</div>
+    <div class="white-text" ng-show="!cities.list.length && !myForm.city.$error.required" >Такого города нет в Московской области</div>
 </div>
 
