--- a/Client.Web/Scripts/app/component/carousel/example/index.html
+++ b/Client.Web/Scripts/app/component/carousel/example/index.html
@@ -1,3 +1,3 @@
 <div style="width: 673px; height: 547px;">
-    <carousel images="carouselData.images"></carousel>
+    <carousel images="testData.images"></carousel>
 </div>
