--- a/Client.Web/Scripts/app/component/login/login.html
+++ b/Client.Web/Scripts/app/component/login/login.html
@@ -1,4 +1,4 @@
-<div class="row">
+﻿<div class="row">
     <div class="medium-4 columns">
         <div class="bg-image"></div>
         <div class="login-info" ng-if="activePage === 'login'">
