--- a/Client.Web/Scripts/app/component/gheader/gheader.html
+++ b/Client.Web/Scripts/app/component/gheader/gheader.html
@@ -1,4 +1,4 @@
-<header class="gheader">
+﻿<header class="gheader">
   <img ui-sref="search" src="../Content/Images/logo-green.svg" class="logo-green"/>
   <div class="grey text">Решение квартирного вопроса</div>
   <nav>
