--- a/Client.Web/Views/Home/Index.cshtml
+++ b/Client.Web/Views/Home/Index.cshtml
@@ -1,10 +1,13 @@
-﻿<!DOCTYPE html>
+﻿@model string
+
+<!DOCTYPE html>
 
 <html>
 <head>
     <title>title</title>
 </head>
 <body>
+<div id="apiUrl" data-url="@Model"></div>
 <div>
 
 </div>
