Set up build task

--- a/Client.Web/Scripts/app/component/city-popup/city-popup.html
+++ b/Client.Web/Scripts/app/component/city-popup/city-popup.html
@@ -1,5 +1,5 @@
 <div class="bg-image">
-    <img src="app/theme/img/ng-image.png">
+    <img src="../Content/Images/ng-image.png">
 </div>
 <div ng-if="!autocomplete" class="no-autocomplete">
     <h1 class="modal-header">Ваш город Москва?</h1>
