--- a/Client.Web/Scripts/app/component/config/router/apartment-detail.html
+++ b/Client.Web/Scripts/app/component/config/router/apartment-detail.html
@@ -6,6 +6,42 @@
                 <h4 style="margin-top: 15px;">{{testData.summary.address}}</h4>
                 <span style="font-weight: 500;">{{testData.summary.price | currencyFilter : '₽' : ' '}}</span>
                 <span style="font-weight: 500;padding-left: 20px;">{{testData.summary.station}}</span>
+                <div class="clearfix" style="max-width: 600px;margin-top: 35px;">
+                    <div class="clearfix" style="float: left;width: 250px;">
+                        <span style="font-size: 18px;font-weight: 900;">Основное</span>
+                        <div class="clearfix" style="margin-top: 15px;font-size: 14px;font-weight: 500;">
+                            <span style="float: left;">Этаж</span>
+                            <span style="float: right;color: #7d7d7d;">{{testData.summary.floor}}</span>
+                        </div>
+                        <div class="clearfix" style="margin-top: 15px;font-size: 14px;font-weight: 500;">
+                            <span style="float: left;">Площадь</span>
+                            <span style="float: right;color: #7d7d7d;">{{testData.summary.area}} м<sup>2</sup></span>
+                        </div>
+                        <div class="clearfix" style="margin-top: 15px;font-size: 14px;font-weight: 500;">
+                            <span style="float: left;">Количество комнат</span>
+                            <span style="float: right;color: #7d7d7d;">{{testData.summary.roomsCount}}</span>
+                        </div>
+                        <div class="clearfix" style="margin-top: 15px;font-size: 14px;font-weight: 500;">
+                            <span style="float: left;">Тип недвижимости</span>
+                            <span style="float: right;color: #7d7d7d;">{{testData.summary.type}}</span>
+                        </div>
+                        <div class="clearfix" style="margin-top: 15px;font-size: 14px;font-weight: 500;">
+                            <span style="float: left;">Категория строения</span>
+                            <span style="float: right;color: #7d7d7d;">{{testData.summary.category}}</span>
+                        </div>
+                    </div>
+                    <div class="clearfix" style="float: right;width: 280px;">
+                        <span style="font-size: 18px;font-weight: 900;">Дополнительно</span>
+                        <div class="clearfix" style="margin-top: 15px;font-size: 14px;font-weight: 500;">
+                            <span style="float: left;">Предоставлены документы</span>
+                            <span style="float: right;color: #7d7d7d;">{{testData.summary.hasDocs ? 'Да' : 'Нет'}}</span>
+                        </div>
+                        <div class="clearfix" style="margin-top: 15px;font-size: 14px;font-weight: 500;">
+                            <span style="float: left;">Дата публикации</span>
+                            <span style="float: right;color: #7d7d7d;">{{testData.summary.publishDate | date : 'dd.MM.yyyy'}}</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="apartment-description" style="width: 647px;height: 232px;border-radius: 8px;background: #fff;padding: 20px 30px 30px 30px;">
