--- a/Client.Web/Scripts/app/component/config/router/apartment-detail.html
+++ b/Client.Web/Scripts/app/component/config/router/apartment-detail.html
@@ -5,7 +5,7 @@
                 <h6 style="color: #b3c4cf;font-size: 12px;font-weight: bold;">{{testData.summary.roomsCount}}-КОМНАТНАЯ КВАРТИРА</h6>
                 <h4 style="margin-top: 15px;">{{testData.summary.address}}</h4>
                 <span style="font-weight: 500;">{{testData.summary.price | currencyFilter : '₽' : ' '}}</span>
-                <span style="font-weight: 500;padding-left: 20px;">{{testData.summary.station}}</span>
+                <span style="font-weight: 500;padding-left: 20px;"><i class="icon metro" style="display: inline-block; width: 16px; height: 11px; margin-right: 3px; background: url('../content/images/metro_logo.png') no-repeat;"></i>{{testData.summary.station}}</span>
                 <div class="clearfix" style="max-width: 600px;margin-top: 35px;">
                     <div class="clearfix" style="float: left;width: 250px;">
                         <span style="font-size: 18px;font-weight: 900;">Основное</span>
@@ -49,13 +49,19 @@
         </div>
     </div>
     <div class="right-column clearfix" style="width: 673px;float: right;">
-        <div style="width: 673px;height: 547px;padding-bottom: 26px;border-radius: 8px">
+        <div style="width: 673px;height: 547px; margin-bottom: 26px; border-radius: 8px; overflow: hidden;">
             <carousel images="testData.images"></carousel>
         </div>
-        <div class="apartment-map-wrapper" style="height: 400px;border-radius: 8px">
+
+        <div class="apartment-map-wrapper" style="height: 400px;border-radius: 8px;  border-radius: 8px; overflow: hidden;">
             <ya-map ya-zoom="10" ya-center="[37.62,55.747]" ya-after-init="afterMapInit($target)" ya-controls>
                 <ya-geo-object ya-source="testData.coords" ya-options="{preset: 'islands#circleIcon',iconColor: '#ff6f37'}"></ya-geo-object>
             </ya-map>
         </div>
+        <style>
+            .apartment-map-wrapper .ng-scope {
+                border-radius: 8px; overflow: hidden;
+            }
+        </style>
     </div>
 </div>
