--- a/Client.Web/Scripts/app/component/gheader/gheader.html
+++ b/Client.Web/Scripts/app/component/gheader/gheader.html
@@ -1,4 +1,4 @@
-<header class="gheader">
+﻿<header class="gheader">
   <img ui-sref="home" src="../Content/Images/logo-green.svg" class="logo-green"/>
   <div class="grey text">Решение квартирного вопроса</div>
   <nav>
@@ -6,6 +6,8 @@
     <a ui-sref="my-ads" ui-sref-active="active" class="menu-item">Мои объекты</a>
   </nav>
   <button type="button" class="button round alert">Продать квартиру</button>
-  <div class="black text" >Войти в профиль</div>
-  <div class="user-logo"></div>
+  <div class="black text">Войти в профиль</div>
+  <div class="user-logo">
+    <img src="../content/images/user-logo.svg">
+  </div>
 </header>
