--- a/Client.Web/Scripts/app/component/gheader/gheader.scss
+++ b/Client.Web/Scripts/app/component/gheader/gheader.scss
@@ -24,10 +24,10 @@ $line: 40px;
     color: #aeaeae;
     margin-right: 95px;
   }
-<<<<<<< HEAD
-  .black{
-    color:#000;
-    cursor:pointer;
+  .black {
+    color: #000;
+    cursor: pointer;
+  }
   .text {
     display: inline-block;
     font-size: 14px;
