--- a/Client.Web/Scripts/app/theme/style/buttons.scss
+++ b/Client.Web/Scripts/app/theme/style/buttons.scss
@@ -15,5 +15,13 @@
     width:100%;
     text-align:center;
     border-radius:3px;
+    &:hover{
+      background-color: #15a36b;
+    }
+    &[disabled]{
+      opacity:0.35;
+      background-color: #09c77b;
+      cursor:default;
+    }
   }
 }
