gig-15: add flat filter to app deps

--- a/Client.Web/Scripts/app/component/config/router/search-page.html
+++ b/Client.Web/Scripts/app/component/config/router/search-page.html
@@ -1,6 +1,6 @@
 <div class="search_page clearfix">
     <div class="left_column column">
-        <div class="flat_filter">1</div>
+        <flat-filter></flat-filter>
 
         <div class="offers">
             <div class="title">
