--- a/Client.Web/Scripts/app/component/multiselect-dropdown/multiselect-dropdown.html
+++ b/Client.Web/Scripts/app/component/multiselect-dropdown/multiselect-dropdown.html
@@ -1,5 +1,5 @@
-<div class="multiselect-dropdown">
-    <input type="text" class="dropdown-filter" ng-model="dropdownFilter" ng-click="showList = !showList" placeholder="{{selectedItems.length ? (selectedItems.length + ' станции') : 'Любое'}}"/>
+<div class="multiselect-dropdown" on-click-outside="showList = false;">
+    <input type="text" class="dropdown-filter" ng-model="dropdownFilter" ng-focus="showList = true;" placeholder="{{selectedItems.length ? (selectedItems.length + ' станции') : 'Любое'}}"/>
     <ul class="dropdown-list" ng-show="showList">
         <li class="list-item" ng-repeat="item in items track by $index" ng-click="selectItem(item)">
             <span class="mid-dot" ng-style="{color: item.color}">&middot</span>
