--- a/Client.Web/Scripts/app/component/multiselect-list/multiselect-list.html
+++ b/Client.Web/Scripts/app/component/multiselect-list/multiselect-list.html
@@ -1,3 +1,3 @@
 <ul class="multiselect-list clearfix">
-    <li class="list-item" ng-class="{'selected': item.selected}" ng-repeat="item in items track by item.value" ng-click="selectItem(item)">{{item.name}}</li>
+    <li class="list-item" ng-class="{'selected': item.selected}" ng-repeat="item in items track by item.value" ng-click="selectItem(item, $event)">{{item.name}}</li>
 </ul>
