--- a/Client.Web/Scripts/app/component/carousel/carousel.html
+++ b/Client.Web/Scripts/app/component/carousel/carousel.html
@@ -5,8 +5,8 @@
     </span>
 
     <div ng-hide="disableArrows">
-      <a class="carousel-arrow arrow-left" ng-click="setNextImage(-1)"></a>
-      <a class="carousel-arrow arrow-right" ng-click="setNextImage(1)"></a>
+      <a class="carousel-arrow arrow-left" ng-click="setNextImage(-1, $event)"></a>
+      <a class="carousel-arrow arrow-right" ng-click="setNextImage(1, $event)"></a>
     </div>
 
     <span class="carousel-image" ng-repeat="img in images track by $index" ng-class="{active: img.active}">
