--- a/Client.Web/Scripts/app/component/multiselect-dropdown/multiselect-dropdown.html
+++ b/Client.Web/Scripts/app/component/multiselect-dropdown/multiselect-dropdown.html
@@ -1,15 +1,16 @@
 <div class="multiselect-dropdown" on-click-outside="showList = false;">
     <input type="text" class="dropdown-filter" ng-model="dropdownFilter" ng-focus="showList = true;" placeholder="{{selectedItems.length ? (selectedItems.length + ' станции') : 'Любое'}}"/>
     <ul class="dropdown-list" ng-show="showList">
-        <li class="list-item" ng-repeat="item in items track by $index" ng-click="selectItem(item)">
+        <li class="list-item" ng-repeat="item in items track by $index" ng-click="selectItem(item, $event)">
             <span class="mid-dot" ng-style="{color: item.color}">&middot</span>
             {{item.name}}
         </li>
     </ul>
-    <ul class="dropdown-selected-list">
-        <li class="list-item" ng-repeat="item in selectedItems track by $index" ng-click="selectItem(item)">
+    <ul class="dropdown-selected-list" ng-show="selectedItems.length">
+        <li class="list-item" ng-repeat="item in selectedItems track by $index" ng-click="removeItem($index)">
             <span class="mid-dot" ng-style="{color: item.color}">&middot</span>
             {{item.name}}
+            <span class="list-item-remove">x</span>
         </li>
     </ul>
 </div>
