--- a/Client.Web/Scripts/app/component/config/router/search-page.html
+++ b/Client.Web/Scripts/app/component/config/router/search-page.html
@@ -1,15 +1,118 @@
-<div class="search_page clearfix">
-    <div class="left_column column">
-        <flat-filter></flat-filter>
+<div class="search-page clearfix">
+    <div class="left-column column">
+        <flat-filter class="flat_filter"></flat-filter>
 
         <div class="offers">
             <div class="title">
                 <span class="count">219</span> предложений
             </div>
-            <div class="offers_list">
+            <div class="offers_list clearfix">
+                <div class="flat-card">
+                    <div class="card_image">
+                        <img src="../content/images/flat/1.jpeg" alt="">
+                    </div>
+                    <div class="card_description">
+                        <div class="card-title">Однушка на ул. Юных Ленинцев</div>
+                        <div class="card-info"><span class="metro-label" style="background: #ba46d2;"></span> м. Кузьминки,
+                            94 м<sup>2</sup>, 16 этаж
+                        </div>
+                        <div class="card-price">10 350 000 &#8381;</div>
+                    </div>
+                    <div class="card_control_more">Подробнее</div>
+                </div><!-- /.flat-card -->
 
+                <div class="flat-card">
+                    <div class="card_image">
+                        <img src="../content/images/flat/1.jpeg" alt="">
+                    </div>
+                    <div class="card_description">
+                        <div class="card-title">Однушка на ул. Юных Ленинцев</div>
+                        <div class="card-info"><span class="metro-label" style="background: #ba46d2;"></span> м. Кузьминки,
+                            94 м<sup>2</sup>, 16 этаж
+                        </div>
+                        <div class="card-price">10 350 000 &#8381;</div>
+                    </div>
+                    <div class="card_control_more">Подробнее</div>
+                </div><!-- /.flat-card -->
+
+                <div class="flat-card">
+                    <div class="card_image">
+                        <img src="../content/images/flat/1.jpeg" alt="">
+                    </div>
+                    <div class="card_description">
+                        <div class="card-title">Однушка на ул. Юных Ленинцев</div>
+                        <div class="card-info"><span class="metro-label" style="background: #ba46d2;"></span> м. Кузьминки,
+                            94 м<sup>2</sup>, 16 этаж
+                        </div>
+                        <div class="card-price">10 350 000 &#8381;</div>
+                    </div>
+                    <div class="card_control_more">Подробнее</div>
+                </div><!-- /.flat-card -->
+
+                <div class="flat-card">
+                    <div class="card_image">
+                        <img src="../content/images/flat/1.jpeg" alt="">
+                    </div>
+                    <div class="card_description">
+                        <div class="card-title">Однушка на ул. Юных Ленинцев</div>
+                        <div class="card-info"><span class="metro-label" style="background: #ba46d2;"></span> м. Кузьминки,
+                            94 м<sup>2</sup>, 16 этаж
+                        </div>
+                        <div class="card-price">10 350 000 &#8381;</div>
+                    </div>
+                    <div class="card_control_more">Подробнее</div>
+                </div><!-- /.flat-card -->
+
+                <div class="flat-card">
+                    <div class="card_image">
+                        <img src="../content/images/flat/1.jpeg" alt="">
+                    </div>
+                    <div class="card_description">
+                        <div class="card-title">Однушка на ул. Юных Ленинцев</div>
+                        <div class="card-info"><span class="metro-label" style="background: #ba46d2;"></span> м. Кузьминки,
+                            94 м<sup>2</sup>, 16 этаж
+                        </div>
+                        <div class="card-price">10 350 000 &#8381;</div>
+                    </div>
+                    <div class="card_control_more">Подробнее</div>
+                </div><!-- /.flat-card -->
+
+                <div class="flat-card">
+                    <div class="card_image">
+                        <img src="../content/images/flat/1.jpeg" alt="">
+                    </div>
+                    <div class="card_description">
+                        <div class="card-title">Однушка на ул. Юных Ленинцев</div>
+                        <div class="card-info"><span class="metro-label" style="background: #ba46d2;"></span> м. Кузьминки,
+                            94 м<sup>2</sup>, 16 этаж
+                        </div>
+                        <div class="card-price">10 350 000 &#8381;</div>
+                    </div>
+                    <div class="card_control_more">Подробнее</div>
+                </div><!-- /.flat-card -->
+
+                <div class="flat-card">
+                    <div class="card_image">
+                        <img src="../content/images/flat/1.jpeg" alt="">
+                    </div>
+                    <div class="card_description">
+                        <div class="card-title">Однушка на ул. Юных Ленинцев</div>
+                        <div class="card-info"><span class="metro-label" style="background: #ba46d2;"></span> м. Кузьминки,
+                            94 м<sup>2</sup>, 16 этаж
+                        </div>
+                        <div class="card-price">10 350 000 &#8381;</div>
+                    </div>
+                    <div class="card_control_more">Подробнее</div>
+                </div><!-- /.flat-card -->
             </div>
         </div>
     </div>
+    <div class="right-column column">
+        <div class="search_map" style="width: 100%;height: 800px;">
+            <ya-map ya-zoom="10" ya-center="[37.62,55.747]" ya-after-init="afterMapInit($target)" ya-controls>
+                <ya-geo-object ya-source="testData.coords" ya-options="{preset: 'islands#circleIcon',iconColor: '#ff6f37'}"></ya-geo-object>
+            </ya-map>
+        </div>
 
+    </div>
 </div>
