gig-15: fix filter z-index, add apartment-id href

--- a/Client.Web/Scripts/app/component/config/router/search-page.html
+++ b/Client.Web/Scripts/app/component/config/router/search-page.html
@@ -18,7 +18,7 @@
                         </div>
                         <div class="card-price">10 350 000 &#8381;</div>
                     </div>
-                    <div class="card_control_more">Подробнее</div>
+                    <a class="card_control_more" ui-sref="apartment-detail/:id">Подробнее</a>
                 </div><!-- /.flat-card -->
 
                 <div class="flat-card">
@@ -32,7 +32,7 @@
                         </div>
                         <div class="card-price">10 350 000 &#8381;</div>
                     </div>
-                    <div class="card_control_more">Подробнее</div>
+                    <a class="card_control_more" ui-sref="apartment-detail/:id">Подробнее</a>
                 </div><!-- /.flat-card -->
 
                 <div class="flat-card">
@@ -46,7 +46,7 @@
                         </div>
                         <div class="card-price">10 350 000 &#8381;</div>
                     </div>
-                    <div class="card_control_more">Подробнее</div>
+                    <<a class="card_control_more" ui-sref="apartment-detail/:id">Подробнее</a>
                 </div><!-- /.flat-card -->
 
                 <div class="flat-card">
@@ -60,7 +60,7 @@
                         </div>
                         <div class="card-price">10 350 000 &#8381;</div>
                     </div>
-                    <div class="card_control_more">Подробнее</div>
+                    <a class="card_control_more" ui-sref="apartment-detail/:id">Подробнее</a>
                 </div><!-- /.flat-card -->
 
                 <div class="flat-card">
@@ -74,7 +74,7 @@
                         </div>
                         <div class="card-price">10 350 000 &#8381;</div>
                     </div>
-                    <div class="card_control_more">Подробнее</div>
+                    <a class="card_control_more" ui-sref="apartment-detail/:id">Подробнее</a>
                 </div><!-- /.flat-card -->
 
                 <div class="flat-card">
@@ -88,7 +88,7 @@
                         </div>
                         <div class="card-price">10 350 000 &#8381;</div>
                     </div>
-                    <div class="card_control_more">Подробнее</div>
+                    <a class="card_control_more" ui-sref="apartment-detail/:id">Подробнее</a>
                 </div><!-- /.flat-card -->
 
                 <div class="flat-card">
@@ -102,7 +102,7 @@
                         </div>
                         <div class="card-price">10 350 000 &#8381;</div>
                     </div>
-                    <div class="card_control_more">Подробнее</div>
+                    <a class="card_control_more" ui-sref="apartment-detail/:id">Подробнее</a>
                 </div><!-- /.flat-card -->
             </div>
         </div>
